# rust-incubator

./: .gitignore  Cargo.toml  README.md
1_concepts/: Cargo.toml
1_concepts/1_1_default_clone_copy/src/: main.rs
1_concepts/1_2_box_pin/: Cargo.toml
1_concepts/1_2_box_pin/src/: lib.rs  main.rs
1_concepts/1_3_rc_cell/src/: main.rs
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/: Cargo.toml
1_concepts/1_5_convert_cast_deref/src/: main.rs
1_concepts/1_6_dispatch/src/: main.rs
1_concepts/1_7_sized/: Cargo.toml
1_concepts/1_7_sized/src/: dispatch.rs  main.rs
1_concepts/1_8_thread_safety/src/: main.rs
1_concepts/1_9_phantom/src/: main.rs
1_concepts/src/: main.rs
2_idioms/2_1_type_safety/src/: main.rs  post_state.rs
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_3_bound_impl/src/: main.rs
2_idioms/2_4_generic_in_type_out/src/: main.rs
2_idioms/2_5_exhaustivity/src/: lib.rs
2_idioms/2_6_sealing/src/: lib.rs  my_error.rs  my_iterator_ext.rs
2_idioms/src/: main.rs  money.rs  vending_machine.rs
3_ecosystem/: Cargo.toml
3_ecosystem/3_0_tiny_images/: Cargo.toml  README.md
3_ecosystem/3_0_tiny_images/src/: cli.rs  image_input.rs  instant_layer.rs  main.rs
3_ecosystem/3_0_tiny_images/tiny_images/: tiny.config.toml
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml  documents.web
3_ecosystem/3_11_async/documents/: https:www.4chan.org.index.html  https:zed.dev.index.html
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/btree_proc_macro/: Cargo.toml
3_ecosystem/3_2_macro/btree_proc_macro/src/: lib.rs
3_ecosystem/3_2_macro/src/: main.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/: Cargo.toml
3_ecosystem/3_5_collections/src/: lib.rs  main.rs
3_ecosystem/3_5_collections/tests/: collections.rs
3_ecosystem/3_5_collections/tests/features/: collections.feature
3_ecosystem/3_6_serde/: Cargo.toml  request.toml  request.yaml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml  config.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs
4_backend/: .env  Cargo.toml  docker-compose.yml
4_backend/4_1_db/: Cargo.toml  docker-compose.yml
4_backend/4_1_db/src/: main.rs
4_backend/4_1_db/src/commands/: clap.rs  users.rs
4_backend/4_1_db/src/entities/: prelude.rs  role_user.rs  sea_orm_active_enums.rs  users.rs
4_backend/4_1_db/src/repo/: mod.rs
4_backend/4_2_http/: Cargo.toml
4_backend/4_2_http/migrations/: 20240329203854_insert_default_role.sql
4_backend/4_2_http/src/commands/: clap.rs  mod.rs  roles.rs  users.rs
4_backend/4_2_http/src/entities/: roles.rs
4_backend/4_2_http/src/repo/: mod.rs  roles.rs
4_backend/4_3_api/: .env  Cargo.toml
4_backend/4_3_api/migrations/: 20240329134551_init.sql
4_backend/4_3_api/src/: lib.rs
4_backend/4_3_api/src/commands/: clap.rs  mod.rs  roles.rs  users.rs
4_backend/4_3_api/src/entities/: mod.rs  role_user.rs  roles.rs  sea_orm_active_enums.rs  users.rs
4_backend/4_3_api/src/repo/: users.rs
4_backend/migrations/: 20240404215337_init.sql
4_backend/src/: main.rs  schema.rs
