[package]
name = "step_4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
juniper = "0.16.1"
actix-web = "4.5"
juniper_actix = "0.5.0"
actix-jwt-auth-middleware = "0.5"
anyhow = "1.0.81"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
pwhash = "1"
actix-web-lab = "0.20.2"
actix-cors = "0.7.0"
serde = "*"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
ed25519-compact = "2.1.1"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
