[package]
name = "step_3_8"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.21"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "time"] }
tracing-log = "0.2.0"
tracing = "0.1.40"
time = { version = "0.3.34", features = ["formatting", "parsing", "serde-well-known", "serde"] }